20050730:
- made mbuffer.c lint clean
- fixed some types
- Makefile fix for install

20050726:
- added support for openssl based md5 hashing
- support of transfer summary in gigabyte
- support for passing buffer size in gigabyte (G)
  (please pass the relevant CFLAGS for 64Bit executables for
   your compiler to configure)
- added support for passing command to autoloader 
  (patch submitted by Wolfgang Denk)
- enhanced network parameter parsing
- FIX: transient error in status display
- FIX: mbuffer could hang on first SIGINT (chance 1/3)
- fixed a bug in network client verification code
- pass CFLAGS also to link phase
- unlink tmpfile as early as possible
- check close for errors
  (see Chris Gerhard's Weblog concerning close on
  http://blogs.sun.com/roller/page/chrisg?anchor=did_that_close_succeed)
- additional sanity checks for buffer limits

20050510:
- fixed possible lockup upon SIGINT
- fixed displayed time
- updated display to change to MB instead of kB when > 3072kB

20050321:
- compile time fix for gentoo and suse 9.2
- made --enable-debug and --enable-md5 work
- gcc optimization flag set to -O2, -O as default

20050125:
- fixed operation of low watermark (-p)
- made printf formating more standard conforming
- start output before input thread
- more minor fixes

20050124 (unannounced interims version):
- fixed summary bug reported
- kicked automake
- removed locale support (too much work to support properly)
- changed debugmsg to a C99 macro, if debugging is switched off
- fix: final newline of statusThread was printf()ed to stderr instead 
  of Terminal
- fix: potential incorrect written last block
- fixed warnings: comparison of signed and unsigned
- beautified summary
- added low watermark (request by Greg Freemyer)
  (restarts reading if dropped below - needed for FAST streamers;
   I don't have such a beast and I never expected such a thing to exist...)
  WARNING: changed argument -p to represent low watermark (was high watermark)